Bug 136769 - digikam crashes when resetting Album icon (with no album selected)
Summary: digikam crashes when resetting Album icon (with no album selected)
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Thumbs-Album (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-03 12:34 UTC by Fabien
Modified: 2017-07-29 05:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabien 2006-11-03 12:34:36 UTC
Version:            (using KDE KDE 3.5.4)
Installed from:    Ubuntu Packages
OS:                Linux

In digikam 0.9.x, if you right click on the left sidebar containing the albums, but without selecting any album (below the last album), you can choose "Reset Album icon".
Doing this will crash digikam.
Comment 1 Fabien 2006-11-03 12:37:51 UTC
BTW, I didn't attach any backtrace. Let me know if you need one...
Comment 2 Marcel Wiesweg 2006-11-03 23:08:10 UTC
SVN commit 601623 by mwiesweg:

Only display "Reset album icon" if there is an item under the cursor

BUG: 136769



 M  +2 -1      NEWS  
 M  +1 -1      digikam/albumfolderview.cpp  


--- trunk/extragear/graphics/digikam/NEWS #601622:601623
@@ -316,6 +316,7 @@
 188 ==> 136162 : ISO Slider label is incorrectly labeled as "sensibility", should be sensitivity.
 189 ==> 133026 : Crashes on systems using hyperthreading.
 190 ==> 136260 : Awkward management of metadata and digikam-tags and comments.
-191 ==> 
+191 ==> 136769 : digikam crashes when resetting Album icon (with no album selected)
+192 ==>
 
 ----------------------------------------------------------------------------------------------------
--- trunk/extragear/graphics/digikam/digikam/albumfolderview.cpp #601622:601623
@@ -418,7 +418,6 @@
     KPopupMenu popmenu(this);
     popmenu.insertTitle(SmallIcon("digikam"), i18n("My Albums"));
     popmenu.insertItem(SmallIcon("albumfoldernew"), i18n("New Album..."), 10);
-    popmenu.insertItem(SmallIcon("reload_page"), i18n("Reset Album Icon"), 13);
 
     AlbumFolderViewItem *item = dynamic_cast<AlbumFolderViewItem*>(listitem);
     if (item && !item->getAlbum())
@@ -431,6 +430,7 @@
     if(item && item->parent())
     {
         popmenu.insertItem(SmallIcon("pencil"), i18n("Edit Album Properties..."), 11);
+        popmenu.insertItem(SmallIcon("reload_page"), i18n("Reset Album Icon"), 13);
         popmenu.insertSeparator();
 
         // Add KIPI Albums plugins Actions