Only display "Reset album icon" if there is an item under the cursor

BUG: 136769


svn path=/trunk/extragear/graphics/digikam/; revision=601623